# SimpleList

./: README.md  RU-README.md  meson.build  org.MinistryOfFreeSoftware.SimpleList.json
example/: main.vala  meson.build
src/: ActiveCompactingList.vala  LazyCompactingList.vala  SimpleList.vala  meson.build
